# FlightNet

./: .gitattributes  .gitignore  README.md  app.py  dashboard.py  flightnet.yml  pyproject.toml  train.py
data/: airports_geolocation.csv  flights_2024_08.csv  hourly_weather_summer_2024.csv  processed_flight_data.parquet
src/: graph_engine.py  model.py  pipeline.py
templates/: index.html
